<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ConstraintLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond_ecran"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:onClick="onAddButtonClicked"
        android:scrollbarThumbVertical="@color/textColorPrimary"
        app:tint="@color/textColorPrimary"
        app:backgroundTint="@color/div"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewPromesse"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:visibility="gone"
        app:tint="@color/textColorPrimary"
        app:backgroundTint="@color/div"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPromesse"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4">

    </androidx.recyclerview.widget.RecyclerView>

    <ImageView
        android:id="@+id/imageViewMascot"
        android:layout_width="167dp"
        android:layout_height="185dp"
        android:onClick="onClickMascot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton"
        app:srcCompat="@drawable/mascot1" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMascot" />

    <TextView
        android:id="@+id/mascotBubbleTextView"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bubble"
        android:gravity="center"
        android:text="Message de la mascotte"
        android:textColor="@color/textColorPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewPromesse"
        app:layout_constraintEnd_toStartOf="@+id/imageViewMascot"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:onClick="onClickSearchButton"
        android:tint="@color/bubble_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_magnify_black_48dp" />

    <ImageButton
        android:id="@+id/calendarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:onClick="onClickCalendarButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calendar_icon" />

    <TextView
        android:id="@+id/dateDayView"
        android:layout_width="221dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:text="2021\nLundi 3 mars"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onClickProfileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_account_circle_24"
        app:tint="@color/bubble" />

</androidx.constraintlayout.widget.ConstraintLayout>